# FreeRTOSMinGW

./: CMakeLists.txt  README.md  main.cpp
FreeRTOS/portable/: FreeRTOSConfig.h
